style.css
:root {
  --green: #6aaa64;
  --yellow: #c9b458;
}

body {
  background-color: #222;
  font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
  font-weight: bold;
  color: #FFF;
  font-size: 30px;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 15px;
}

.letter-tile {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50px;
  height: 50px;
  margin: 4px;
  border: 2px solid #333;
}

.row {
  display: flex;
}

.keyboard-row {
  display: flex;
  justify-content: center;
}

.keyboard-key {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 35px;
  height: 60px;
  border:none;
  color: white;
  border-radius: 4px;
  background-color: #555;
  margin: 4px;
  font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
  font-weight: bold;
  font-size: 16px;
}

.enter-key {
  width: 80px;
}

.popup {
  background-color: #bbb;
  padding: 10px 20px;
  border-radius: 8px;
  box-shadow: 2px 4px rgba(0, 0, 0, 0.5);
  text-align: center;
}

.popup-container {
  position: absolute;
  font-size: 16px;
  color: #111;
}

.replay {
  margin-top: 10px;
  cursor: pointer;
}

.G {
  background-color: var(--green);
  border-color: var(--green);
}

.Y {
  background-color: var(--yellow);
  border-color: var(--yellow);
}

.X {
  background-color: #333;
}

.tutorial-background {
  background-color: rgba(0,0,0,.5);
  position: fixed; 
  top: -50%; 
  left: -50%; 
  width: 200%; 
  height: 200%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.tutorial {
  min-width: 350px;
  width: 18vmax;
  font-size: 16px;
  background-color: #222;
  padding: 1.4vmax 3vmax;
  border-radius: 15px;
}

.tutorial-letter {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 30px;
  height: 30px;
  margin: 4px;
  border: 2px solid #333;
}

.examples {
  list-style: none;
}

.examples li {
  margin-top: 20px;
}

.examples div {
  margin-top: 8px;
}

.close-button {
  float: right;
  margin-right: -20px;
  background: none;
  font-size: 30px;
  font-weight: 900;
  color: white;
  border: none;
}

.close-button:hover {
  cursor: pointer;
}

.tutorial-button-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.tutorial-button {
  border: 3px solid #333;
  background-color: transparent;
  color: white;
  font-size: 16px;
  font-weight: 900;
  text-transform: uppercase;
  border-radius: 8px;
  padding: 5px 10px;
}

